# android-project

./: local.properties
app/: CMakeLists.txt  build.gradle
app/jni/: Application.mk
app/jni/SDL/: Android.mk
app/jni/SDL/src/: SDL4Android.c
app/jni/SDL/src/core/android/: SDL_android.c
app/src/main/: AndroidManifest.xml
app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLControllerManager.java
app/src/main/java/org/libsdl/app/ui/: PlayerActivity.java
app/src/main/res/layout/: activity_player.xml
